syntax = "proto3"; 
option java_multiple_files = true;
package dnc.grpcService.protocol; 
import "model.proto";
 
service HolidayService
{ 
    rpc GetHolidays (GetHolidaysReq) returns (GetHolidaysRsp) {} 
} 


